Full screen home section will no longer display on mobile

--- a/pp.css
+++ b/pp.css
@@ -352,3 +352,9 @@ color: #003355;
 		font-size: 18px;
 }
 }
+
+@media only screen and (max-width: 500px) {
+	.home-top-bg {
+		display: none;
+}
+}
